--- a/WPF_EXAM_2/MainWindow.xaml
+++ b/WPF_EXAM_2/MainWindow.xaml
@@ -5,16 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_EXAM_2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="900" Width="800">
 
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
-
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <local:UserControlCalc/>
-
-
+        <local:UserControlCalc
+            Grid.Row="0"/>
+        <local:UserControlCalc
+            Grid.Row="1"/>
     </Grid>
 </Window>
